# floracad

./: Cargo.toml  GUIDE.md  INSTALLATION.md  input.md  readme.md
_archive/: _angle_system.rs  _horizontal_calculation.rs  _horizontal_create.rs  _sight_distance.rs  _tasks.rs  _vertical_calculation.rs  _vertical_create.rs
look_up/CALTRANS_HDM/: table_201-1.txt  table_201-7.txt  table_202-2.txt  table_202-2A.txt  table_202-2B.txt  table_202-2C.txt  table_202-2D.txt  table_202-2E.txt
src/: angle_system.rs  calc_dimensions.rs  coordinate_system.rs  datatypes.rs  horizontal_calculation.rs  horizontal_create.rs  lib.rs  main.rs  pages.rs  sight_distance.rs  tables.rs  vertical_calculation.rs  vertical_create.rs
src/export/: horizontal.rs  mod.rs  vertical.rs
src/frontend/: horizontal.rs  mod.rs  output.rs  vertical.rs
src/horizontal/: calculate.rs  display.rs  interval.rs  mod.rs
src/vertical/: calculate.rs  display.rs  interval.rs  mod.rs
tests/: datatypes.rs  horizontal.rs  mod.rs  tests.rs
tests/inputs/: input.md
tests/inputs/HA/: input_0.md  input_1.md  input_5.md  input_R_I_PI.md  input_R_I_PT.md
tests/inputs/VA/: input_10_err.md  input_11_err.md  input_12_err.md  input_2.md  input_3.md  input_4.md  input_5.md  input_6_err.md  input_7_err.md  input_8_err.md  input_9_err.md
