[package]
name = "floracad"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dms-coordinates = "1.1.0"
eqsolver = "0.1.1"
iced = "0.9.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
thiserror = "1.0.44"
